<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/main_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true" 
            android:layout_marginTop="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_horizontal_margin" >

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_text"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/displayButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/inputText"
                    android:onClick="onClick"
                    android:text="@string/display" 
                    style="@android:style/Widget.DeviceDefault.Button"/>

                <EditText
                    android:id="@+id/inputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/welcome"
                    android:hint="@string/text_to_display"
                    android:paddingTop="15dp" />

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/displayButton"
                    android:layout_toEndOf="@id/displayButton"
                    android:layout_toRightOf="@id/displayButton"
                    android:onClick="onClick"
                    android:text="@string/clear" 
                    style="@android:style/Widget.DeviceDefault.Button.Small"/>

                <CheckBox
                    android:id="@+id/selectLoop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/clearButton"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/clearButton"
                    android:layout_toRightOf="@id/clearButton"
                    android:onClick="onClick"
                    android:text="@string/loop" >
                </CheckBox>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/quotes_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_horizontal_margin" >

                <TextView
                    android:id="@+id/quotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/quotes"
                    android:textSize="25sp" />

                <ListView
                    android:id="@+id/phrases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/quotes"
                    android:layout_alignStart="@id/quotes"
                    android:layout_below="@+id/quotes"
                    android:paddingTop="5dp"
                    android:smoothScrollbar="true" 
                    android:divider="@null">
                </ListView>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>